# ChangeLog for media-gfx/cptutils
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/cptutils/ChangeLog,v 1.12 2015/04/08 17:58:14 mgorny Exp $

  08 Apr 2015; Michał Górny <mgorny@gentoo.org> cptutils-1.48.ebuild,
  cptutils-1.50.ebuild, cptutils-1.51.ebuild, cptutils-1.52.ebuild,
  cptutils-1.53.ebuild:
  Drop old Python implementations

*cptutils-1.54 (06 Jun 2014)

  06 Jun 2014; Tim Harder <radhermit@gentoo.org> +cptutils-1.54.ebuild,
  +files/cptutils-1.54-parallel-make.patch:
  Version bump.

*cptutils-1.53 (25 Apr 2014)

  25 Apr 2014; Tim Harder <radhermit@gentoo.org> +cptutils-1.53.ebuild:
  Version bump.

*cptutils-1.52 (19 Mar 2014)

  19 Mar 2014; Tim Harder <radhermit@gentoo.org> +cptutils-1.52.ebuild:
  Version bump.

*cptutils-1.51 (28 Feb 2014)

  28 Feb 2014; Tim Harder <radhermit@gentoo.org> +cptutils-1.51.ebuild:
  Version bump.

  13 Feb 2014; Tim Harder <radhermit@gentoo.org> -cptutils-1.45.ebuild,
  -cptutils-1.46.ebuild, -cptutils-1.47.ebuild,
  -files/cptutils-1.45-as-needed.patch, -files/cptutils-1.45-tests.patch:
  Remove old.

*cptutils-1.50 (13 Feb 2014)

  13 Feb 2014; Tim Harder <radhermit@gentoo.org> +cptutils-1.50.ebuild:
  Version bump.

*cptutils-1.48 (03 Nov 2013)

  03 Nov 2013; Tim Harder <radhermit@gentoo.org> +cptutils-1.48.ebuild:
  Version bump.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> cptutils-1.47.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*cptutils-1.47 (11 Jul 2013)

  11 Jul 2013; Tim Harder <radhermit@gentoo.org> +cptutils-1.47.ebuild:
  Version bump, use python-single-r1.

*cptutils-1.46 (15 Dec 2012)

  15 Dec 2012; Tim Harder <radhermit@gentoo.org> +cptutils-1.46.ebuild:
  Version bump.

*cptutils-1.45 (03 Sep 2012)

  03 Sep 2012; Tim Harder <radhermit@gentoo.org> +cptutils-1.45.ebuild,
  +files/cptutils-1.45-as-needed.patch, +files/cptutils-1.45-tests.patch,
  +metadata.xml:
  Initial import, ebuild by me.