@@ -8,30 +8,24 @@ DIST cptutils-1.51.tar.gz 533657 SHA256 56a9688e114efeb826f759c98f346da08c2e0b14
 DIST cptutils-1.52.tar.gz 536378 SHA256 ba1ab7ee59db3f6b977bb7d45525d091b7914fd50929a81a5dce10c3f5bb007d SHA512 dd682e16abef4dcefbd01a21047a0cfa6348492566d446c73176ac4915ba82e0163d6c665266cdaa0203d883aa24fb3b152a0a70de9cfe8c844f25cb0dfb0f5d WHIRLPOOL 42524d3c9181fcc08bdeda83f302da9b2defffe1b6ae4fd7ee6a142f27211af7cccf4dfb4bf0e254bf62f3cace902510f83aeb17f818d9646a27ab279eeba9ec
 DIST cptutils-1.53.tar.gz 539467 SHA256 455695c419dc47b93126c10e0134224d0c7a169cba356469c43e6205d9d832f6 SHA512 a0973371f248495e277956580c7b0f4863d210e717cd5cfd4c7634494115a196841315c9d3fb572804b22b571dd9ac279e16398b81e61399b361f75c677f4ffd WHIRLPOOL c28ab0174a4ecf48faa85f65e9e11ed00e939e56ba5fe42b6657b517a11c95090653d5cf0a084203ad223d578d94f25e1014aab4ccc74e372ad34e5ea6b48b19
 DIST cptutils-1.54.tar.gz 587268 SHA256 07848a1e76337595c1ee7619638f16b6c0818717b2460096093078866402cc22 SHA512 8bae9d5d9d5b2ae0e39eda6e157734fa17afe6225b4966c93db4072f31e7ec91c7c0a7b4b1cf0bfdd696444485a61e93da725c2d94854b4de5e1c9936bec3e37 WHIRLPOOL fb39ef953fd92a177f25a262b9122decad22713019a1821d8a8a048b12ddbbd125e860fec923148e1529b54883a6feb9b155b5b28c18be00ef763b0b6ae0137c
+DIST cptutils-1.59.tar.gz 599033 SHA256 d4f3adf55bc1643d64d513371c0948d37ad4f0bb614ea90557c23d7ebd860616 SHA512 b8e78eadb7353d6cbb8b01eb3eb2791e425697ccff6df50125392cb476e7b1bdb5c83b40e27d9c28899f4ed364e46e195febaa28374ffe5abca697665838f7fe WHIRLPOOL ad7c95a5be927199e83f24ff94950c2595738139c8fe84c489561d0d26c61509c493966b806213cd91d87c3efd87b5ec15fc1ec9dc2bb8fd74278f78cba0e35f
 EBUILD cptutils-1.48.ebuild 745 SHA256 e5976a6dcad1f604607e1afd0da48a602b8487d07b29926c549d4c69f095ec0d SHA512 26ad4e3a804c4236b2adc3249db61a3946c30621a4111597c433496cb90a942b9c3b222893b21818982dc40b068f493d89029dfed60a7e40184f91802cbe6160 WHIRLPOOL aa267988405e66ed9cd394b986af03da227feccd17aa42a9d1b1c4733189971f1b8099c9731c8c9ef4b3c015a29cb6c2255e7e8720afd6e04f3beafdea282809
 EBUILD cptutils-1.50.ebuild 745 SHA256 5341e1f2584aa41ca6cd4b194abbebe4746183f52115db7db04ccfbc90cb64b0 SHA512 43a371c3e75d23c3937845b4b022fb5cd7c728c1c19506d6f5b070def0fa6113bba7fbe3e9e5f56dd6fd54c9b5b396ea0b2dff501799d44adbc61f53b7bfb142 WHIRLPOOL 4a945f6a1978e61b74627c5003a4522c29fe8bb36a0a9249ffeb3af34093b07a6082661980bc4084ff2e2cd77dea626097b9b2e1c8e719ca19c0b499fc20386e
 EBUILD cptutils-1.51.ebuild 745 SHA256 fb6184bc5c1d247229ae58e02d27806649d42bdee50d57afe5dcdf8c2de672cd SHA512 fb3cf4d776d2d5633c1c084f99d9157f1e7a4c0df91775d60afdf4384e68c5549f022284e1d9925970709cc2f77bde34bee6bbba3e3536952b5f0424072bb93d WHIRLPOOL 1776618aed04957519d5cf526ad3ba630009a4d1e5210e8f8929d0ff056f64452fcfc33ca47532136cc853e9ba509f101edd81e22c30dd046364094ac7467d66
 EBUILD cptutils-1.52.ebuild 745 SHA256 c616427ce3b20b262abc9d146acbb53e3f1b86cc1d3e8389815d54c8891deaf1 SHA512 9610cfb970441ffe1e80555fe5b4b50802e2fab0f488bc4f9b884a2051d59e40e53c00339ad1580a9ac5873910f6013fbba49f8664bc87d7a87cfcdf9acb7b4d WHIRLPOOL f69ce69bb395473de5f44bde62b7e20ed119071dd62ec9cf87a41e71c73c3c717a1c1c4d25e3d395e32f056731b7daae939f76afee8821ba404f4a5e78db5cea
 EBUILD cptutils-1.53.ebuild 745 SHA256 68a0671f923b948028400335806391a71270771caaeabf6effcc8f3ac5359d6f SHA512 fd28d81db1ab7deccb78f46eb86328a7939682f9588981ffae2b3dbffd74a77b359bc41971af53dfa8629776bd46b0b03b0bb093f171470be4a25cc1e587e603 WHIRLPOOL db3c79781cd9df9464b1944fc32ded4d62da11d8ddede694738a8794393984954064e4978291e0c278db9cbb7b9503a4830e061e6705c6d3d3674ae09390c31f
 EBUILD cptutils-1.54.ebuild 802 SHA256 3f23eaa69d8ca407a614e8ff0c3fb7792090e49a5b58c941459bf81eb1ab329b SHA512 4c950bca515a0dfeca3bf899eb2febb1f0588a7dec531e73cfa76c9671dc87869519903dc9d336a179b7f85dc5bdac8dcfd9ecbe370648986394d8d74dae5a14 WHIRLPOOL c9774bd950578b093e4c17dd4a15bd5964bff9fc5938774e4f1f5cae00a0fc3ad8604f5bef287f48d80edfd94cb37fe596426729ba8541b905ba3962d0418d4b
-MISC ChangeLog 1985 SHA256 29165cca3236f2ceb6b1008afcfeb1d51d383e2d5be0499301c9eefa29007d23 SHA512 d40d5bfb288d94809dffc50cbeb148084402706d749919c1365cee0f45577f47b19873de0fce4cb403d7d41b7c6ecbdadb557a29fff4464a7652a172225f855f WHIRLPOOL 90b8daf439bfcefdf544b37c9e702580a4aaa71c3240ac077573def2e3504b5b44aee1009bdc3f09c8b1a0f7f9c084f5c74eaba42f1da24dea7acfa24ed5289c
+EBUILD cptutils-1.59.ebuild 803 SHA256 c4a0c219422bd43aa3e158f1e1c09fd7b89d15cc3d8024b6221d18a14381a40a SHA512 d30592b55421bbb0e9df1389155b86f21aee0645b1ae6ce735826974bbfdfa7b94723a57ecbf50d7896cdd059700b0b220b20d6fb8de0bd2c7a03acaada236d1 WHIRLPOOL 5baabee477f39550f9ca2aa6f8b5fc6d1cd01416d28b6544856ed2ef545b5af661acdfd365eb3db46772190b941efae0464a2ee83f4c897670db27e47e6b68a9
+MISC ChangeLog 2107 SHA256 14a154deb7c312bffa4e7941701c16df1344f25416d682d3f1f6cc880f089941 SHA512 1618bac8b256887ac28677386edc330e46dc8172edf36a98caeec62757ede55e8ad683b6b720d6f73620b0ffd40c178c52733e202c09d6f6ae50c17c7837eb91 WHIRLPOOL ac2feb8d8a936a86ac5ceaa37840c96697cf83147fe1a23083d287ac338f373d3484620daac48cbae2c1adea6d38ff1fc27878738df7f15cbdff5d8aa7ec54a9
 MISC metadata.xml 161 SHA256 e8daadc5e27e3ef1148993b5b48d96e93bc36d798a1f416693f7f8c84be427e1 SHA512 425caf0160f1410ce7bf1d4639020be7f6335152c339edbce80676bff4166f1cab3ae9e13161c47b98dc00741dab3bfa45e9572a3314844476e480f5c2b58d7d WHIRLPOOL ad7cdd3352dbc12cb4181fb5d63b5aee5ce3a151b975c12a96c4a5c91f751736d27282ad22633c7e768230266bce5d17947735d33ef5c5c2341c3f9435b9ebb0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJVJWxGXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOSmMP/0xCLs38Z4jKg6l49OohHdHu
-HAeDqcy2iKm4isM2SmnBPtIytIhgkBCysx2aNSN6QGp2Yx50POn2Si3CHRROmfAy
-02wdsohy7l0tv4bN6i29eORDhZc00c98GPRiPTxr93KMxA4nt1mpDIGDU8GBfJEK
-iOaYz/b9KrsSC1SbHxVxqToH2xvwn1S5y0v6aMK4vpZeGBIn9+UUG92W1czdmhsi
-XCRwY7pshm7Sa3kHFSEbi2BATqFpetaeoIQY0jG1mm6y2SNtjBhsg3NX6SvOGJAo
-ykMfrpv3TWcBE5rtKQ38yyv05NW3Lz3ahB4VTcM14hgPhtpMdifjIy2PR75ExD9m
-dqzJX5wqdGXSTRRveI+XB70/RIH8AdUaRliDu9KT514O2IvPUodJsLL8xMFGqzPV
-+HJWae/ZtvQ4mbYqd0fyG1TPAcT5RHYTc7yRsIETlaVu/vFrlYIaM8KjM3FSJY6I
-9/rhgJCXQQEM60q4NLf701jK5RugmXMWA6cfb666rh2zOZdtT8KkCbaCPqw5L4gi
-FiZM4NjZfaYUGQRQVpXOBpz3yI7k7VrQopdW+OgeWkJuF9Fw9+R4WSY+s6XlayUh
-D0zsGMyVZE3oUw5CJekkcFPl59wq1BvC2aOC9eYhV1lR2G/I/OUYJu8dcBt7Z0EL
-plSXv0ZsQzWnDCJNAAvg
-=TMEC
+iQEcBAEBCAAGBQJVnzqkAAoJEEqz6FtPBkyja+QH+wQocj2nBrWSIA/QA5VWnD4f
+ffRGsz3lVz/OpquYWJCwaNT7oaHUu6v/6+tK7jy+PJBzV+EtpcHDQMtpvFyZYJ0f
+Z8bPfi8CGy7PxnBkvHQf8NlkROTtPGvGTSjWuzZ7ZgIS3xpoWZQI7O7Ej6Lzjbjz
+5AWrJKLmk502oaWYOeuyRELG9O8bBoQVqhR3HKzitpdqjUBC6maHsopijNOlP5o5
+7QyvUwVCvddpkhKs+TJl+v4mw1zinNNHiLbgy3J71MDY4TxlWjfKsTrPB30+Ga9I
+9qqFo6CGxcf9fIaYulvYPW5z/fXXL/ZnUyBIdx6hN4/vnjC7N9/W9W/I6lTVzAM=
+=GuyR
 -----END PGP SIGNATURE-----
